--- a/style.css
+++ b/style.css
@@ -1,94 +1,484 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: white;
-}
-
-header{
-    width: 100%;
     background-color: black;
     color: white;
-    text-transform: uppercase;
-    font-family: "Londrina Solid", fantasy;
-    font-size: 3em;
-    text-align: center;
-    padding: 0.4em;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
-article{
-    padding: 0 2rem;
-    font-family: "Bree Serif";
-    font-size: 1.2em;
-}
-
-h2{
-    font-family: "Oswald";
-}
-
-footer{
-    padding: 4rem 2rem 0rem 2rem;
-    font-family: "Bree Serif";
-    float: right;
-}
-
-#stack{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 90%;
-    margin: 3em auto 0 auto;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-}
-
-.wr{
-    width: 22%;
-    text-align: center;
-    height: 100px;
-    line-height: 90px;
-    -webkit-box-shadow: 0px 4px 3px 3px #ddd;
-            box-shadow: 0px 4px 3px 3px #ddd;
+    font-family: "Londrina Solid";
 }
 
 a{
     text-decoration: none;
     color: inherit;
+    padding: 0;
+    margin: 0;
+    display: block;
 }
 
-.first:hover{
-    -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-            transform: scale(1.1);
+.git{
+    width: 25px;
+}
+
+nav{
+    padding: 0rem 0rem;
+    float: right;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+    display: block;
+}
+
+ul:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+ul li{
+    float: left;
+    padding: 0;
+    margin: 0;
+    display: block;
+}
+
+.nav{
+    margin: auto;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    font-size: 1.3rem;
+}
+
+.container{
+    width: 980px;
+    margin: auto;
+}
+
+nav a{
+    margin: 0 0.5rem;
+}
+
+@keyframes moving{
+    0%{
+        transform: rotateZ(0deg) translate(0px, 0px);
+    }
+    30%{
+        transform: rotateZ(1deg) translate(0px, 10px);
+    }
+    50%{
+        transform: rotateZ(0deg) translate(1px, 6px);
+    }
+    70%{
+        transform: rotateZ(1deg) translate(0px, 4px);
+    }
+    90%{
+        transform: rotateZ(-1deg) translate(1px, 2px);
+    }
+    100%{
+        transform: rotateZ(0deg) translate(0px, 0px);
+    }
+}
+
+@keyframes show-intro{
+    0%{     
+        transform: scale(0.1);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+.set_logo_text {
+    animation: show-intro 0.4s ease;
+}
+
+.cloud img{
+    width: 100%;
+    height: 100%;
+}
+.cloud{
+    width: 480px;
+        animation: moving 8s infinite linear;
+}
+.js{
+    color: #ff0037;
+    width: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 2rem;
+}
+
+#wrapper{
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    /*! overflow-wrap: break-word; */
+}
+
+#wrapper .flt{
+    float: left;
+    position: relative;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: end;
+}
+
+.red_line{
+    width: 100%;
+    background-color: #000;
+    box-sizing: border-box;
+    /*! border-left: #ff0037 12px solid; */
+}
+
+.gray_line .content div{
+    float: left;
+    transform: skewX(10deg);
+}
+
+.content{
+    font-size: 6rem;
+}
+
+.js span{
+    display: block;
+}
+
+#wrapper .content{
+    display: block;
+    position: relative;
+    /*! width: 100%; */
+}
+
+#wrapper .red_line .content{
+    width: 89%;
+    position: absolute;
+    right: 10;
+    display: block;
+}
+
+.akatsuki{
+    width: 414px;
+    background-color: #ff0037;
+    float: right;
+    padding: 1rem 0rem 1rem 3rem;
+    /*! margin-left: 5rem; */
+}
+
+.set_logo_text{
+    display: none;
+}
+
+#wrapper .text{
+    font-size: 4rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#wrapper .text span{
+    
+    display: block;
+    margin: 0 0.5rem;
+}
+
+#wrapper .text span:last-child{
+    color: #ff0037;
+}
+
+#wrapper .text{
+    width: 60%;
+    margin: auto;
+}
+
+#wrapper .set_logo_text{
+    display: block;
+    margin: auto;
+}
+
+#menu{
+    display: none;
+    margin: 1rem 0 1rem 01rem;
+    width: 32px;
+    float: right;
+    cursor: pointer;
+}
+.line-menu{
+    width: 100%;
+    height: 0.2rem;
+    margin: 0.5rem 0;
+    background-color: white;
+    display: block;
+    border-radius: 10px;
+}
+
+.show-menu{
+    max-width: 100vw;
+    padding-left: 32px;
+}
+
+#menu-list{
+    transition: all 0.2s ease-in;
+    opacity: 1;
+}
+
+.to-icon-close .line-menu:nth-child(1) {
+    transform: rotateZ(45deg) translate3d(0, 8px, 0);
+    width: 110%;
+}
+
+.to-icon-close .line-menu:nth-child(2) {
+    transform: rotateZ(135deg) translate3d(0, 8px, 0);
+    width: 110%;
+}
+
+.to-icon-close .line-menu:nth-child(3) {
+    left: 200%;
+    position: fixed;
+}
+
+.to-icon-close .line-menu{
+    background-color: #ff0037;
+}
+
+#menu .line-menu{
+    transition: 0.2s all ease-in-out;
+}
+
+#menu:after{
+    content: '';
+    clear: both;
+    display: block;
+}
+
+.go-about{
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+}
+
+.go-about img{
+    display: block;
+    margin: auto;
     cursor: pointer;
 }
 
-.first{
+.go-about .arrow{
+    width: 48px;
+}
+
+#sec2{
+    background-color: black;
+    font-size: 2em;
+    padding-bottom: 4rem;
+}
+
+#sec2 article{
+    padding-top: 4rem;
+}
+
+#sec2 h2{
+    padding: 0rem;
+    margin: 0;
+    color: white;
+    text-transform: uppercase;
+    background-color: #ff0037;
+    max-width: 300px;
+    text-align: center;
+    padding: 0.4rem;
+    box-sizing: border-box;
+}
+#sec2:after{
+    content: '';
+    clear: both;
+    display: block;
+}
+
+#sec2 .main span{
+    color: white;
+    border: red;
+}
+
+@keyframes colors{
+    from{
+        color: #ff0037;
+    }
+    to{
+        color: white;
+    }
+}
+#sec2 .heart{
+    animation: colors 1s ease infinite;
+    display: inline;
+    transition: all 0.4 ease;
+}
+
+#sec2 #stack{
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    /*! margin: auto; */
+    width: 100%;
+    flex-wrap: nowrap;
+    margin: 0;
+}
+
+#sec2 .nmvr{
+    color: #ff0037;
+}
+
+.card{
+    padding: 0;
+    margin: 0 5%;
+    float: none;
+    width: 20%;
+    /*! position: relative; */
+    height: 100px;
+    line-height: 56px;
+    text-align: center;
+}
+
+.card .square{
+    /*! position: relative; */
+    /*! display: block; */
     background-color: white;
+    color: black;
     width: 100%;
-    height: 80%;
+    text-align: center;
 }
 
-.second{
-    background-color: #2ae093;
-    width: 100%;
-    height: 20%;
+
+.card .square:hover{
+    transform: translateY(4px);
 }
 
-span{
-    font-family: "Oswald"
+.card .single-line{
+    width: 100%;
+    background-color: #ff0037;
+    height: 5px;
+}
+
+.whonext{
+    padding: 2rem 0;
+    margin: 0;
+}
+
+footer{
+    position: relative;
+    width: 100%;
+    padding: 2rem 0;
+}
+
+footer .container{
+    /*! display: flex; */
+    justify-items: center;
+    color: #ff0037;
+}
+
+footer .container:after{
+    content: '';
+    clear: both;
+    display: block;
+}
+
+footer img{
+    width: 40px;
+}
+
+footer .akatsuki{
+    width: auto;
+    background-color: transparent;
+    float: none;
+    padding: 0;
+    color: white;
+}
+
+footer .content{
+    float: right;
+    font-size: 1.5rem;
+    position: relative;
+}
+
+@media (max-width: 1080px){
+    .container{
+        width: 100%;
+        padding: 0 2rem;
+        box-sizing: border-box;
+    }
+    .nav{
+        padding: 0rem 2rem;
+    }
+}
+
+@media (max-width: 780px){
+    #menu{
+        display: block;
+        z-index: 10;
+    }
+    .container{
+        padding: 0 2rem;
+    }
+    .cloud{
+        width: 300px;
+    }
+    #wrapper .text{
+        font-size: 2.4em;
+    }
+    ul{
+        padding: 2rem 0;
+    }
+    ul li{
+        float: none;
+        padding: 0.5rem 0;
+    }
+    .nav{
+        padding: 0;
+    }
+    nav{
+        position: absolute;
+        max-width: 0px;
+        overflow: hidden;
+        right: 0;
+        background-color: #151515;
+        z-index: -1;
+        width: 40%;
+        height: 100vh;
+        opacity: 0;
+    }
+    #sec2 #stack{
+        flex-wrap: wrap;
+    }
+    .card{
+        width: 40%;
+        margin-bottom: 20px;
+    }
+    #sec2{
+        font-size: 1.8rem;
+    }
 }
 
 @media (max-width: 480px){
-    #stack{
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        margin-top: 0;
+    #sec2{
+        font-size: 1.4rem;
     }
-    .wr{
-        width: 40%;
-        margin: 1rem 0;
+    #sec2 h2{
+        width: 100%;
+        max-width: none;
+    }
+    footer .content{
+        margin: auto;
+    }
+    .cloud{
+        width: 250px;
+    }
+    #wrapper .text{
+        font-size: 2em;
     }
 }
