--- a/assets/css/helpers.sass
+++ b/assets/css/helpers.sass
@@ -27,6 +27,15 @@ $fonts: ("secondary": $fira-sans, "primary": $fira-condesed)
   font-family: typho("secondary")
   font-weight: bold
 
+@mixin typho-title-post
+  font-family: typho("secondary")
+  font-weight: bold
+  font-size: 2rem
+
+@mixin typho-subtitle
+  font-family: typho("primary")
+  font-weight: normal
+
 @mixin typho-nav
   font-family: typho("primary")
   font-weight: bold
