Update for footerx component

--- a/assets/css/helpers.sass
+++ b/assets/css/helpers.sass
@@ -4,7 +4,7 @@
 // https://github.com/sass/sass/issues/216
 $secondary: ("secondary": #ff0037, "secondary--dark": #e10534)
 $primary: ("primary": black, "primary--reverse": white)
-$grey: ("grey": #5a5a5a)
+$grey: ("grey": #5a5a5a, "grey--light": #E5E5E5)
 $colors: map-merge(map-merge($primary, $secondary), $grey)
 
 @function pallete($key)
